Remove unused HTML pages, SQL migration script, and update Docker configuration; add PatientDTO and enhance Doctor and Patient models with validation